--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: MyString
-  password_digest: MyString
+  email: fazilqureshi@live.com
+  password_digest: $2a$12$R9K7P0LIaY33cpk4oAzMJOUuDTAuiiI65jW1xjhoWJV8x8LZoVYm.
 
 two:
-  email: MyString
-  password_digest: MyString
+  email: test2@email.com
+  password_digest: $2a$12$R9K7P0LIaY33cpk4oAzMJOUuDTAuiiI65jW1xjhoWJV8x8LZoVYm.
